--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
+    <link href="Resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
+
   <body>
-    Broadway
+
+    <!-- "Header section" -->
+    <div class="header">
+      <h1>Broadway Design</h1>
+    </div>
+
   </body>
 </html>
