--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
     <!-- "Header section" -->
     <div class="header">
       <h1>Broadway Design</h1>
-    </div>
+
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+
+    <!-- "Header section end" -->
+  </div>
+  <div>
+    <h2>Our Process</h2>
+  </div>
 
   </body>
 </html>
