--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
         <li><a href="#">Team</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-
+    </div>
     <!-- "Header section end" -->
-  </div>
+
+    <!-- "Process section" -->
   <div>
     <h2>Our Process</h2>
+
+    <p><img src="Resources/icons/identify.svg" alt=""></p>
+    <h3>Identify</h3>
+
+    <p>We focus on the most important details.</p>
   </div>
+    <!-- "Process section end" -->
 
   </body>
 </html>
