Add all process items.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
     <p><img src="Resources/icons/identify.svg" alt=""></p>
     <h3>Identify</h3>
 
-    <p>We focus on the most important details.</p>
+      <p>We focus on the most important details.</p>
+
+    <p><img src="Resources/icons/understand.svg" alt=""></p>
+    <h3>Understand</h3>
+
+      <p>We study our projects inside and out.</p>
+
+      <p><img src="Resources/icons/execute.svg" alt=""></p>
+      <h3>Execute</h3>
+
+        <p>We put everything we have into our work.</p>
+
   </div>
     <!-- "Process section end" -->
 
