--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <h1>Broadway Design</h1>
 
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Team</a></li>
+        <li><a href="#">Home</a></li><br>
+        <li><a href="#">About</a></li><br>
+        <li><a href="#">Work</a></li><br>
+        <li><a href="#">Team</a></li><br>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
