--- a/index.html
+++ b/index.html
@@ -44,5 +44,11 @@
   </div>
     <!-- "Process section end" -->
 
+    <!-- "Designed in section" -->
+  <div class="divider">
+    <h3>Designed in New York</h3>
+  </div>
+    <!-- "Process section end" -->
+
   </body>
 </html>
