--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
 
-    <!-- "Header section" -->
+<!-- "Header section" -->
     <div class="header">
       <h1>Broadway Design</h1>
 
@@ -20,9 +20,9 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
-    <!-- "Header section end" -->
+<!-- "Header section end" -->
 
-    <!-- "Process section" -->
+<!-- "Process section" -->
   <div>
     <h2>Our Process</h2>
 
@@ -42,13 +42,14 @@
         <p>We put everything we have into our work.</p>
 
   </div>
-    <!-- "Process section end" -->
+<!-- "Process section end" -->
 
-    <!-- "Designed in section" -->
+<!-- "Divider" -->
   <div class="divider">
     <h3>Designed in New York</h3>
   </div>
-    <!-- "Process section end" -->
+    <!-- "Divider end" -->
+
 
   </body>
 </html>
