Add lower section.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,28 @@
   <div class="divider">
     <h3>Designed in New York</h3>
   </div>
-    <!-- "Divider end" -->
+<!-- "Divider end" -->
 
+<!-- "Lower section" -->
+  <div>
+    <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+
+    <h3>Team</h3>
+      <p>We're Hiring!</p>
+
+    <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+  </div>
+<!-- "Lower section end" -->
+
+<!-- "Footer section" -->
+  <div>
+    
+  </div>
+<!-- "Footer section end" -->
 
   </body>
 </html>
