--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@
 
 <!-- "Footer section" -->
   <div>
-    
+    <span class="copy">&copy; Broadway 2016<span>
+      <ul class="footer">
+        <li><a href="#">Home</a></li><br>
+        <li><a href="#">About</a></li><br>
+        <li><a href="#">Work</a></li><br>
+        <li><a href="#">Team</a></li><br>
+        <li><a href="#">Contact</a></li>
+      </ul>
   </div>
 <!-- "Footer section end" -->
 
