--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
 <!-- "Lower section end" -->
 
 <!-- "Footer section" -->
-  <div>
+  <div class="footer">
     <span class="copy">&copy; Broadway 2016<span>
-      <ul class="footer">
-        <li><a href="#">Home</a></li><br>
-        <li><a href="#">About</a></li><br>
-        <li><a href="#">Work</a></li><br>
-        <li><a href="#">Team</a></li><br>
-        <li><a href="#">Contact</a></li>
-      </ul>
+      <span>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Work</a>
+        <a href="#">Team</a>
+        <a href="#">Contact</a>
+      </span>
   </div>
 <!-- "Footer section end" -->
 
